--- a/WindowsFormsApp1/CommunicationUI.csproj
+++ b/WindowsFormsApp1/CommunicationUI.csproj
@@ -62,6 +62,12 @@
     </Compile>
     <Compile Include="CommonControls.cs" />
     <Compile Include="DataType.cs" />
+    <Compile Include="Deneme\deneme2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Deneme\deneme2.Designer.cs">
+      <DependentUpon>deneme2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Enums\DataTypeComStatus.cs" />
     <Compile Include="Forms\AccountsForm.cs">
       <SubType>Form</SubType>
@@ -81,6 +87,12 @@
     <Compile Include="Forms\AddProductForm.Designer.cs">
       <DependentUpon>AddProductForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ListProductForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ListProductForm.Designer.cs">
+      <DependentUpon>ListProductForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ProductForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +106,13 @@
       <DependentUpon>TwistMainFormCUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Global.cs" />
+    <Compile Include="Parameters.cs" />
+    <Compile Include="Forms\ProductDetailsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ProductDetailsForm.Designer.cs">
+      <DependentUpon>ProductDetailsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SystemInfoControls.cs" />
     <Compile Include="DataExchange.cs" />
     <Compile Include="Enums\AccessSystem.cs" />
@@ -110,11 +129,11 @@
     <Compile Include="Forms\ChangeAdressForm.Designer.cs">
       <DependentUpon>ChangeAdressForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ListProductsForm.cs">
+    <Compile Include="Forms\ListProductsForm%28OnlyForm%29.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\ListProductsForm.Designer.cs">
-      <DependentUpon>ListProductsForm.cs</DependentUpon>
+      <DependentUpon>ListProductsForm%28OnlyForm%29.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Products.cs">
       <SubType>Form</SubType>
@@ -152,12 +171,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemCurrentInfo.cs" />
+    <Compile Include="Tools.cs" />
     <Compile Include="TypeForm.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TypeForm.resx</DependentUpon>
     </Compile>
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="Deneme\deneme2.resx">
+      <DependentUpon>deneme2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Deneme\denemeForm.resx">
       <DependentUpon>denemeForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -173,8 +196,11 @@
     <EmbeddedResource Include="Forms\ChangeAdressForm.resx">
       <DependentUpon>ChangeAdressForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ListProductForm.resx">
+      <DependentUpon>ListProductForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ListProductsForm.resx">
-      <DependentUpon>ListProductsForm.cs</DependentUpon>
+      <DependentUpon>ListProductsForm%28OnlyForm%29.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainFormCUI.resx">
       <DependentUpon>MainFormCUI.cs</DependentUpon>
@@ -190,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TwistMainFormCUI.resx">
       <DependentUpon>TwistMainFormCUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ProductDetailsForm.resx">
+      <DependentUpon>ProductDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
