--- a/WindowsFormsApp1/CommunicationUI.csproj
+++ b/WindowsFormsApp1/CommunicationUI.csproj
@@ -87,6 +87,12 @@
     <Compile Include="Forms\AddProductForm.Designer.cs">
       <DependentUpon>AddProductForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ListCablesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ListCablesForm.Designer.cs">
+      <DependentUpon>ListCablesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ListProductsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +106,7 @@
       <DependentUpon>TwistMainFormCUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Global.cs" />
+    <Compile Include="ListData.cs" />
     <Compile Include="Parameters.cs" />
     <Compile Include="Forms\ProductDetailsForm.cs">
       <SubType>Form</SubType>
@@ -171,6 +178,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ChangeAdressForm.resx">
       <DependentUpon>ChangeAdressForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ListCablesForm.resx">
+      <DependentUpon>ListCablesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ListProductsForm.resx">
       <DependentUpon>ListProductsForm.cs</DependentUpon>
