--- a/WindowsFormsApp1/CommunicationUI.csproj
+++ b/WindowsFormsApp1/CommunicationUI.csproj
@@ -69,6 +69,12 @@
       <DependentUpon>deneme2.cs</DependentUpon>
     </Compile>
     <Compile Include="Enums\DataTypeComStatus.cs" />
+    <Compile Include="Forms\AddCableForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddCableForm.Designer.cs">
+      <DependentUpon>AddCableForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ListAccountsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Deneme\denemeForm.resx">
       <DependentUpon>denemeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddCableForm.resx">
+      <DependentUpon>AddCableForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ListAccountsForm.resx">
       <DependentUpon>ListAccountsForm.cs</DependentUpon>
